<resources>
    <string name="app_name">Statistics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="new_label_text">New</string>
    <string name="active_label_text">Active</string>
    <string name="critical_label_text">Critical</string>
    <string name="recovered_label_text">Recovered</string>
    <string name="total_label_text">Total</string>
    <string name="search">Search</string>
    <string name="new_cases_label">New</string>
    <string name="active_cases_label">Active</string>
    <string name="critical_cases_label">Critical</string>
    <string name="recovered_cases_label">Recovered</string>
    <string name="total_cases_label">Total</string>
    <string name="death_label">Death</string>


    //string keys of HashMap to reach from activity
    <string name="country_name">country_name</string>
    <string name="day_date">day_date</string>
    <string name="new_cases_sheet">new_cases</string>
    <string name="active_cases_sheet">active_cases</string>
    <string name="critical_cases_sheet">critical_cases</string>
    <string name="recovered_cases_sheet">recovered_cases</string>
    <string name="total_cases_sheet">total_cases</string>
    <string name="new_death_sheet">new_death</string>
    <string name="total_death_sheet">total_death</string>
    <string name="flag_url_sheet">flag_url</string>
    <string name="world">World</string>
    <string name="favourite">Save</string>
    <string name="world_tab">World</string>
    <string name="countries_tab">Countries</string>
    <string name="saved_tab">Saved</string>


</resources>
